imam mustofa dan irsyad nur hakim
index css

--- a/index.html
+++ b/index.html
@@ -1,23 +1,127 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Project team E5</title>
-	<link rel="stylesheet" href="stylesheet.css">
-	<link rel="stylesheet" href="responsive.css">
-</head>
-<body>
- <header>
- </header>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Project team E5</title>
+    <link rel="stylesheet" href="assets/responsive.css" />
+    <link rel="stylesheet" href="assets/stylesheet.css" />
+    <link
+      rel="stylesheet"
+      href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="header-right">
+          <img class="logo" src="assets/image/logojadi.png" alt="Logo" />
+        </div>
+        <div class="header-left">
+          <ul>
+            <li>LOGIN</li>
+            <li>TENTANG</li>
+            <li>TIM KAMI</li>
+          </ul>
+        </div>
+      </div>
+    </header>
 
- <div class="top-wrapper">
-	<div class="container">
-		<h1><mark>WELCOME TO PROJECT E5.</mark></h1>
-		<h1><mark>disini kita akan mempresentasikan hasil dari apa yg sudah dipelajari selama ini.</mark></h1>
-		<p>dengan hadirnya web ini membuktikan bahwa kemampuan kita sudah dapat diakui oleh dunia</p>
-	</div>	
- </div>
+    <main>
+      <!-- Khoirul Huda -->
+      <div class="top-wrapper">
+        <div class="container">
+          <h1><mark>WELCOME TO PROJECT E5.</mark></h1>
+          <h1>
+            <mark
+              >disini kita akan mempresentasikan hasil dari apa yg sudah
+              dipelajari selama ini.</mark
+            >
+          </h1>
+          <p>
+            dengan hadirnya web ini membuktikan bahwa kemampuan kita sudah dapat
+            diakui oleh dunia
+          </p>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <!-- Imam Mustofa -->
+      <div class="page-footer">
+        <div class="footer-wrapper">
+          <div class="footer-top">
+            <img src="assets/image/logojadi.png" alt="Logo" />
+            <p>
+              Kelompok E5 adalah kelompok untuk tugas mandiri tentang pembuatan
+              halaman website html dan css
+            </p>
+          </div>
 
-</body>
+          <div class="footer-middle">
+            <h2>Links</h2>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="">Contact Us</a></li>
+              <li><a href="">Social Link</a></li>
+            </ul>
+            <div class="btn-wrapper">
+              <a href="https://www.facebook.com/" class="btn facebook"
+                ><span class="fa fa-facebook"></span
+              ></a>
+              <a href="https://www.twitter.com/" class="btn twitter"
+                ><span class="fa fa-twitter"></span
+              ></a>
+              <a href="https://www.instagram.com/" class="btn instagram"
+                ><span class="fa fa-instagram"></span
+              ></a>
+              <a href="group_e5" class="btn whatsapp"
+                ><span class="fa fa-whatsapp"></span
+              ></a>
+            </div>
+          </div>
+
+          <div class="footer-bottom">
+            <h2>Contact Us</h2>
+            <div class="contact-form">
+              <form id="contact-form" method="post" action="">
+                <input
+                  name="nama"
+                  type="text"
+                  class="form-control"
+                  placeholder="Your Name"
+                  required
+                /><br />
+                <input
+                  name="email"
+                  type="email"
+                  class="form-control"
+                  placeholder="Your Email"
+                  required
+                /><br />
+                <textarea
+                  name="message"
+                  class="form-control"
+                  placeholder="Message"
+                  required
+                ></textarea
+                ><br />
+                <input
+                  type="text"
+                  class="form-control submit"
+                  value="SEND MESSAGE"
+                /><br />
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-ground">
+        <div class="footer-inside-ground">
+          &copy 2020 | design by group E5
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
