--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <title>Project team E5</title>
     <link rel="stylesheet" href="assets/responsive.css" />
     <link rel="stylesheet" href="assets/stylesheet.css" />
-    <link
-      rel="stylesheet"
-      href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
-    />
   </head>
   <body>
     <header>
@@ -27,7 +23,7 @@
       </div>
     </header>
 
-    <main>
+    <div class="main">
       <!-- Khoirul Huda -->
       <div class="top-wrapper">
         <div class="container">
@@ -44,8 +40,31 @@
           </p>
         </div>
       </div>
-    </main>
-    <footer>
+      <div class="content">
+        <h3 class="section-title">Team Kami</h3>
+        <div class="contents-item">
+          <img src="assets/image/luffy.png" alt="Hendi" />
+          <p>Hendi Adrianto</p>
+        </div>
+        <div class="contents-item">
+          <img src="assets/image/kuroko.png" alt="Khoirul" />
+          <p>Khoirul Huda</p>
+        </div>
+        <div class="contents-item">
+          <img src="assets/image/megumin.png" alt="Helma" />
+          <p>Helma</p>
+        </div>
+        <div class="contents-item">
+          <img src="assets/image/shiba.png" alt="Imam" />
+          <p>Imam Mustofa</p>
+        </div>
+        <div class="contents-item">
+          <img src="assets/image/kirito.png" alt="Irsyad" />
+          <p>Irsyad Nur Hakim</p>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
       <!-- Imam Mustofa -->
       <div class="page-footer">
         <div class="footer-wrapper">
@@ -122,6 +141,6 @@
           &copy 2020 | design by group E5
         </div>
       </div>
-    </footer>
+    </div>
   </body>
 </html>
