--- a/index.html
+++ b/index.html
@@ -40,31 +40,48 @@
           </p>
         </div>
       </div>
+      <div class="contents-hendi">
+        <h2>
+          Targetkan 60 Ribu Peserta, Kominfo Gandeng 88 Perguruan Tinggi
+          Indonesia Jadi Mitra DTS 2020
+        </h2>
+        <img src="assets/image/dts.jpeg" alt="Dts" />
+        <div class="contents-item-hendi">
+          <p>
+            Menteri Kominfo Johnny G. Plate saat memberikan sambutan dalam acara
+            Penandatanganan Memorandum of Understanding (MoU) dan Perjanjian
+            Kerja Sama (PKS) Fresh Graduate Academy (FGA) dan Vocational School
+            Graduate Academy (VSGA) Digital Talent Scholarship (DTS) Tahun 2020
+            di Jakarta, Selasa (17/12/2019). - (Jamal)
+          </p>
+        </div>
+      </div>
       <div class="content">
+        <!-- Helma -->
         <h3 class="section-title">Team Kami</h3>
         <div class="contents-item">
-          <img src="assets/image/luffy.png" alt="Hendi" />
           <p>Hendi Adrianto</p>
+          <img src="assets/image/luffy.png" alt="Hendi" />
         </div>
         <div class="contents-item">
-          <img src="assets/image/kuroko.png" alt="Khoirul" />
           <p>Khoirul Huda</p>
+          <img src="assets/image/kuroko.png" alt="Khoirul" />
         </div>
         <div class="contents-item">
-          <img src="assets/image/megumin.png" alt="Helma" />
           <p>Helma</p>
+          <img src="assets/image/megumin.png" alt="Helma" />
         </div>
         <div class="contents-item">
-          <img src="assets/image/shiba.png" alt="Imam" />
           <p>Imam Mustofa</p>
+          <img src="assets/image/shiba.png" alt="Imam" />
         </div>
         <div class="contents-item">
-          <img src="assets/image/kirito.png" alt="Irsyad" />
           <p>Irsyad Nur Hakim</p>
+          <img src="assets/image/kirito.png" alt="Irsyad" />
         </div>
       </div>
     </div>
-    <div class="footer">
+    <footer>
       <!-- Imam Mustofa -->
       <div class="page-footer">
         <div class="footer-wrapper">
@@ -136,11 +153,12 @@
         </div>
       </div>
 
+      <!-- <p>&copy 2020 | design by group E5</p> -->
       <div class="footer-ground">
         <div class="footer-inside-ground">
           &copy 2020 | design by group E5
         </div>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
